@@ -23,6 +23,7 @@ PHP 4                                                                      NEWS
   y2k_compliance is On). (Ilia)
 - Fixed bug #31055 (apache2filter: per request leak proportional to the full
   path of the request URI). (kameshj at fastmail dot fm)
+- Fixed bug #30446 (apache2handler: virtual() includes files out of sequence)
 - Fixed bug #28930 (PHP sources pick wrong header files generated by bison).
   (eggert at gnu dot org)
 - Fixed bug #28074 (FastCGI: stderr should be written in a FCGI stderr stream).
